fix navbar collapse button

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -42,3 +42,11 @@
 .well{
     background-color: #EBFCFB;
 }
+.navbar-toggle{
+    background-color: transparent;
+    background-image: none;
+    border: 1px solid transparent;
+}
+.navbar-toggle .icon-bar {
+    background-color: black;
+}
